[gd_scene load_steps=83 format=2]

[ext_resource path="res://Scripts/Enemies/squidSpawner.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Particles/BaseParticle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/weapons/squiddite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy_img/squidSpawner/idle0002.png" type="Texture" id=4]
[ext_resource path="res://Enemy_img/squidSpawner/idle0003.png" type="Texture" id=5]
[ext_resource path="res://Enemy_img/squidSpawner/idle0004.png" type="Texture" id=6]
[ext_resource path="res://Enemy_img/squidSpawner/idle0005.png" type="Texture" id=7]
[ext_resource path="res://Enemy_img/squidSpawner/idle0006.png" type="Texture" id=8]
[ext_resource path="res://Enemy_img/squidSpawner/idle0007.png" type="Texture" id=9]
[ext_resource path="res://Enemy_img/squidSpawner/idle0008.png" type="Texture" id=10]
[ext_resource path="res://Enemy_img/squidSpawner/idle0009.png" type="Texture" id=11]
[ext_resource path="res://Enemy_img/squidSpawner/idle0010.png" type="Texture" id=12]
[ext_resource path="res://Enemy_img/squidSpawner/idle0011.png" type="Texture" id=13]
[ext_resource path="res://Enemy_img/squidSpawner/idle0012.png" type="Texture" id=14]
[ext_resource path="res://Enemy_img/squidSpawner/idle0013.png" type="Texture" id=15]
[ext_resource path="res://Enemy_img/squidSpawner/idle0014.png" type="Texture" id=16]
[ext_resource path="res://Enemy_img/squidSpawner/idle0015.png" type="Texture" id=17]
[ext_resource path="res://Enemy_img/squidSpawner/idle0016.png" type="Texture" id=18]
[ext_resource path="res://Enemy_img/squidSpawner/idle0017.png" type="Texture" id=19]
[ext_resource path="res://Enemy_img/squidSpawner/idle0018.png" type="Texture" id=20]
[ext_resource path="res://Enemy_img/squidSpawner/idle0019.png" type="Texture" id=21]
[ext_resource path="res://Enemy_img/squidSpawner/idle0020.png" type="Texture" id=22]
[ext_resource path="res://Enemy_img/squidSpawner/idle0021.png" type="Texture" id=23]
[ext_resource path="res://Enemy_img/squidSpawner/idle0022.png" type="Texture" id=24]
[ext_resource path="res://Enemy_img/squidSpawner/idle0023.png" type="Texture" id=25]
[ext_resource path="res://Enemy_img/squidSpawner/idle0024.png" type="Texture" id=26]
[ext_resource path="res://Enemy_img/squidSpawner/idle0025.png" type="Texture" id=27]
[ext_resource path="res://Enemy_img/squidSpawner/idle0026.png" type="Texture" id=28]
[ext_resource path="res://Enemy_img/squidSpawner/idle0027.png" type="Texture" id=29]
[ext_resource path="res://Enemy_img/squidSpawner/idle0028.png" type="Texture" id=30]
[ext_resource path="res://Enemy_img/squidSpawner/idle0029.png" type="Texture" id=31]
[ext_resource path="res://Enemy_img/squidSpawner/idle0030.png" type="Texture" id=32]
[ext_resource path="res://Enemy_img/squidSpawner/idle0031.png" type="Texture" id=33]
[ext_resource path="res://Enemy_img/squidSpawner/idle0032.png" type="Texture" id=34]
[ext_resource path="res://Enemy_img/squidSpawner/idle0033.png" type="Texture" id=35]
[ext_resource path="res://Enemy_img/squidSpawner/idle0034.png" type="Texture" id=36]
[ext_resource path="res://Enemy_img/squidSpawner/idle0035.png" type="Texture" id=37]
[ext_resource path="res://Enemy_img/squidSpawner/idle0036.png" type="Texture" id=38]
[ext_resource path="res://Enemy_img/squidSpawner/idle0037.png" type="Texture" id=39]
[ext_resource path="res://Enemy_img/squidSpawner/idle0038.png" type="Texture" id=40]
[ext_resource path="res://Enemy_img/squidSpawner/idle0039.png" type="Texture" id=41]
[ext_resource path="res://Enemy_img/squidSpawner/idle0040.png" type="Texture" id=42]
[ext_resource path="res://Enemy_img/squidSpawner/hit/hit0045.png" type="Texture" id=43]
[ext_resource path="res://Enemy_img/squidSpawner/hit/hit0046.png" type="Texture" id=44]
[ext_resource path="res://Enemy_img/squidSpawner/hit/hit0047.png" type="Texture" id=45]
[ext_resource path="res://Enemy_img/squidSpawner/hit/hit0048.png" type="Texture" id=46]
[ext_resource path="res://Enemy_img/squidSpawner/hit/hit0049.png" type="Texture" id=47]
[ext_resource path="res://Enemy_img/squidSpawner/hit/hit0050.png" type="Texture" id=48]
[ext_resource path="res://Enemy_img/squidSpawner/hit/hit0051.png" type="Texture" id=49]
[ext_resource path="res://Enemy_img/squidSpawner/hit/hit0052.png" type="Texture" id=50]
[ext_resource path="res://Enemy_img/squidSpawner/hit/hit0053.png" type="Texture" id=51]
[ext_resource path="res://Enemy_img/squidSpawner/hit/hit0054.png" type="Texture" id=52]
[ext_resource path="res://Enemy_img/squidSpawner/hit/hit0055.png" type="Texture" id=53]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0055.png" type="Texture" id=54]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0056.png" type="Texture" id=55]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0057.png" type="Texture" id=56]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0058.png" type="Texture" id=57]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0059.png" type="Texture" id=58]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0060.png" type="Texture" id=59]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0061.png" type="Texture" id=60]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0062.png" type="Texture" id=61]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0063.png" type="Texture" id=62]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0064.png" type="Texture" id=63]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0065.png" type="Texture" id=64]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0066.png" type="Texture" id=65]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0067.png" type="Texture" id=66]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0068.png" type="Texture" id=67]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0069.png" type="Texture" id=68]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0070.png" type="Texture" id=69]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0071.png" type="Texture" id=70]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0072.png" type="Texture" id=71]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0073.png" type="Texture" id=72]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0074.png" type="Texture" id=73]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0075.png" type="Texture" id=74]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0076.png" type="Texture" id=75]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0077.png" type="Texture" id=76]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0078.png" type="Texture" id=77]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0079.png" type="Texture" id=78]
[ext_resource path="res://Enemy_img/squidSpawner/death/death0080.png" type="Texture" id=79]
[ext_resource path="res://Audio/SFX/Enemies/Weenie/death.wav" type="AudioStream" id=80]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": true,
"name": "idle",
"speed": 29.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ) ],
"loop": true,
"name": "hit",
"speed": 29.0
}, {
"frames": [ ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ) ],
"loop": true,
"name": "death",
"speed": 100.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 21.5905
height = 109.23

[node name="Mob" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]
MIN_SPEED = 1
MAX_SPEED = 25
INIT_HEALTH = null
Blood = ExtResource( 2 )
Projectile = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "idle"
frame = 20
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, -12 )
shape = SubResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="StandardFireTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="SalvoTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="DeathNote" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 80 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="timeout" from="StandardFireTimer" to="." method="_on_StandardFireTimer_timeout"]

[connection signal="timeout" from="SalvoTimer" to="." method="_on_SalvoTimer_timeout"]


